  paths.

- bpo-26915: index() and count() methods of collections.abc.Sequence now
  check identity before checking equality when do comparisons.

- bpo-29615: SimpleXMLRPCDispatcher no longer chains KeyError (or any other
  exception) to exception(s) raised in the dispatched methods.
  Patch by Petr Motejlek.

Build
-----

- bpo-23404: Don't regenerate generated files based on file modification time
  anymore: the action is now explicit. Replace ``make touch`` with
  ``make regen-all``.

- bpo-29643: Fix ``--enable-optimization`` didn't work.

Documentation
-------------

- bpo-26985: Add missing info of code object in inspect documentation.

Tests
-----

- bpo-30197: Enhanced functions swap_attr() and swap_item() in the
  test.support module.  They now work when delete replaced attribute or item
  inside the with statement.  The old value of the attribute or item (or None
  if it doesn't exist) now will be assigned to the target of the "as" clause,
  if there is one.


What's New in Python 3.6.1?
===========================

*Release date: 2017-03-21*

Core and Builtins
-----------------

- bpo-29723: The ``sys.path[0]`` initialization change for bpo-29139 caused a
  regression by revealing an inconsistency in how sys.path is initialized when
  executing ``__main__`` from a zipfile, directory, or other import location.
  The interpreter now consistently avoids ever adding the import location's
  parent directory to ``sys.path``, and ensures no other ``sys.path`` entries
  are inadvertently modified when inserting the import location named on the
  command line.

Build
-----

- bpo-27593: fix format of git information used in sys.version

- Fix incompatible comment in python.h


What's New in Python 3.6.1 release candidate 1
==============================================

*Release date: 2017-03-04*

Core and Builtins
-----------------

- bpo-28893: Set correct __cause__ for errors about invalid awaitables
  returned from __aiter__ and __anext__.
